--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1515,266 +1515,63 @@ a {
     left: -1rem;
   }
 }
-.cid-sYBkOrfmyF {
+.cid-sYC7eFVt5E {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ff6666;
+  background-image: url("../../../assets/images/mbr-6.jpg");
 }
-.cid-sYBkOrfmyF .row {
-  margin-left: 0;
-  margin-right: 0;
+.cid-sYC7eFVt5E img,
+.cid-sYC7eFVt5E .item-img {
+  width: 100%;
 }
-.cid-sYBkOrfmyF .item {
-  padding-left: 0;
-  padding-right: 0;
+.cid-sYC7eFVt5E .item:focus,
+.cid-sYC7eFVt5E span:focus {
+  outline: none;
 }
-.cid-sYBkOrfmyF .item-wrapper {
-  height: 100%;
+.cid-sYC7eFVt5E .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
   position: relative;
 }
-.cid-sYBkOrfmyF .item-wrapper img {
+.cid-sYC7eFVt5E .item-wrapper {
+  position: unset;
+  border-radius: 4px;
+  background: #ffd1d1;
   height: 100%;
-  object-fit: cover;
-}
-.cid-sYBkOrfmyF .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-  opacity: 0;
-  color: #ffffff;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #1b1b1b;
-  transition: 0.2s;
+  flex-flow: column nowrap;
 }
-.cid-sYBkOrfmyF .item-wrapper:hover .icon-wrapper {
-  opacity: 0.7;
-}
-.cid-sYBkOrfmyF .carousel-control,
-.cid-sYBkOrfmyF .close {
-  background: #1b1b1b;
-}
-.cid-sYBkOrfmyF .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-sYBkOrfmyF .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-sYBkOrfmyF .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-sYBkOrfmyF .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-sYBkOrfmyF .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-sYBkOrfmyF .close::before {
-  content: '\e91a';
-}
-.cid-sYBkOrfmyF .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-sYBkOrfmyF .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-sYBkOrfmyF .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sYBkOrfmyF .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-sYBkOrfmyF .carousel-control {
-    top: auto;
-    bottom: 1rem;
+@media (min-width: 992px) {
+  .cid-sYC7eFVt5E .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
   }
-}
-.cid-sYBkOrfmyF .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-sYBkOrfmyF .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-sYBkOrfmyF .carousel-indicators li.active,
-.cid-sYBkOrfmyF .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-sYBkOrfmyF .carousel-indicators li::after,
-.cid-sYBkOrfmyF .carousel-indicators li::before {
-  content: none;
-}
-.cid-sYBkOrfmyF .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-sYBkOrfmyF .carousel-indicators {
-    display: none !important;
+  .cid-sYC7eFVt5E .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-sYBkOrfmyF .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+  .cid-sYC7eFVt5E .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-sYC7eFVt5E .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
   }
 }
-@media (max-width: 767px) {
-  .cid-sYBkOrfmyF .carousel-indicators {
-    display: none;
-  }
+.cid-sYC7eFVt5E .mbr-section-btn {
+  margin-top: auto !important;
 }
-.cid-sYBkOrfmyF .carousel-inner {
-  display: flex;
-  align-items: center;
+.cid-sYC7eFVt5E .mbr-section-title {
+  color: #ffffff;
 }
-.cid-sYBkOrfmyF .carousel-inner > .active {
-  display: block;
-}
-.cid-sYBkOrfmyF .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sYBkOrfmyF .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-sYBkOrfmyF .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-sYBkOrfmyF .carousel-control,
-  .cid-sYBkOrfmyF .carousel-indicators,
-  .cid-sYBkOrfmyF .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sYBkOrfmyF .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-sYBkOrfmyF .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-sYBkOrfmyF .carousel-indicators .active,
-.cid-sYBkOrfmyF .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-sYBkOrfmyF .carousel-indicators .active {
-  background: #fff;
-}
-.cid-sYBkOrfmyF .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-sYBkOrfmyF .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-sYBkOrfmyF .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-sYBkOrfmyF .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-sYBkOrfmyF .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-sYBkOrfmyF .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-sYBkOrfmyF .carousel {
-  width: 100%;
-}
-.cid-sYBkOrfmyF .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-sYBkOrfmyF .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-sYBkOrfmyF .modal.fade .modal-dialog,
-.cid-sYBkOrfmyF .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-sYBkOrfmyF .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-sYBkOrfmyF H6 {
+.cid-sYC7eFVt5E .mbr-text,
+.cid-sYC7eFVt5E .mbr-section-btn {
   text-align: center;
+}
+.cid-sYC7eFVt5E .item-title {
+  text-align: center;
+}
+.cid-sYC7eFVt5E .item-subtitle {
+  text-align: left;
 }
 .cid-sYxcr6Yg17 {
   padding-top: 2rem;
@@ -3096,6 +2893,11 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-sYC5LibBav {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ff8a8a;
 }
 .cid-sYxcr6Yg17 {
   padding-top: 2rem;
