create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2005,17 +2005,17 @@ a {
 .cid-sYBrw8intw {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #ffffff;
+  background-color: #ff6666;
 }
 .cid-sYBrwRjhT7 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #ffffff;
+  background-color: #f579b0;
 }
 .cid-sYBrxEDbu4 {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #ffffff;
+  background-color: #e78cf6;
 }
 .cid-sYxcr6Yg17 {
   padding-top: 2rem;
